Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51677

QQC2: TextArea can't be used to show long very long texts

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.7.0 RC
    • 5.6.0 RC
    • Quick: Controls 2
    • None
    • 67f3da65d7d11af025a9bdd54d08ca0bf764c3ce

    Description

      If the lines (height) doesn't fit into the TextArea control, it is impossible to scroll to see the bottom lines.

      Even using the Flickable trick from http://doc-snapshots.qt.io/qt5-5.6/qml-qtquick-textedit.html#details is still now working.

      IMHO TextArea being a high level control should do the flickable trick itself, because otherwise the decorations will be scrolled as well.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            taipan BogDan Vatra
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes