tests/auto/controls/data/tst_textarea.qml
@@ -56,6 +56,15 @@ TestCase {
     }
 
     Component {
+        id: flickable
+        Flickable {
+            width: 200
+            height: 200
+            TextArea.flickable: TextArea { }
+        }
+    }
+
+    Component {
         id: signalSpy
         SignalSpy { }
     }
@@ -136,5 +145,29 @@ TestCase {
         compare(childSpy.count, 0)
 
         control.destroy()
+    }
+
+    function test_flickable() {
+        var control = flickable.createObject(testCase, {text:"line0"})
+        verify(control)
+
+        var textArea = control.TextArea.flickable
+        verify(textArea)
+
+        for (var i = 1; i <= 100; ++i)
+            textArea.text += "line\n" + i
+
+        verify(textArea.contentWidth > 0)
+        verify(textArea.contentHeight > 200)
+
+        compare(control.contentWidth, textArea.contentWidth + textArea.leftPadding + textArea.rightPadding)
+        compare(control.contentHeight, textArea.contentHeight + textArea.topPadding + textArea.bottomPadding)
+
+        control.destroy()
+    }
+
+    function test_warning() {
+        ignoreWarning(Qt.resolvedUrl("tst_textarea.qml") + ":45:1: QML TestCase: TextArea must be attached to a Flickable")
+        testCase.TextArea.flickable = null
     }
 }
